--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ farmacia-frontend/.eslintcache
 farmacia-frontend/.stylelintcache
 farmacia-frontend/.cache/
 farmacia-frontend/.vscode/
+/.metadata/
