--- a/farmacia/src/main/resources/application.properties
+++ b/farmacia/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=farmacia
+
+spring.datasource.url=jdbc:mysql://localhost:3306/camifarma
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Para login personalizado
+spring.security.user.name=
+spring.security.user.password=
+
