--- a/farmacia/src/main/resources/application.properties
+++ b/farmacia/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=farmacia
 
 spring.datasource.url=jdbc:mysql://localhost:3306/camifarma
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:mysql}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
